<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".view.menu.Content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/addRecord"
            android:layout_width="match_parent"
            android:layout_height="@dimen/content"
            android:text="@string/add_record" />

        <Button
            android:id="@+id/dashboard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/content"
            android:text="@string/dashboard" />

        <Button
            android:id="@+id/record"
            android:layout_width="match_parent"
            android:layout_height="@dimen/content"
            android:text="@string/record" />

        <Button
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/content"
            android:text="@string/chart" />

    </LinearLayout>

</LinearLayout>
