<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".view.authentication.Register">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/tesas" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:id="@+id/textView" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register.email.container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register.email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="10"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register.password.container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register.password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register.repassword.container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/register.repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm"
            android:ems="10"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register.wallet.container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/register.wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/yourWallet"
            android:ems="10"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register.register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:background="@color/colorGray"
        android:text="@string/register"/>

    <Button
        android:id="@+id/register.login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/colorGray"
        android:text="@string/login"/>

</LinearLayout>
